PROJECT(ameletHDFReader)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(HDF5 REQUIRED)

FIND_PACKAGE(AmeletHDF REQUIRED)

# This is just a simple variable that lists the source files.
SET(SRCS
  vtkAmeletHDFReader.cxx
  )

FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})
ADD_PARAVIEW_PLUGIN(ameletHDFReader "0.2"
    SERVER_MANAGER_SOURCES ${SRCS}
    SERVER_MANAGER_XML ameletHDFReaderSM.xml
    GUI_RESOURCE_FILES ameletHDFReaderGUI.xml
  )

INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(
  ${VTK_INCLUDE_DIRS}
  ${PARAVIEW_INCLUDE_DIRS}
  ${PARAVIEW_GUI_INCLUDE_DIRS}
  ${VTKCLIENTSERVER_INCLUDE_DIR}
  ${PVSERVERCOMMON_INCLUDE_DIR}
  ${AMELETHDF_INCLUDE_DIRS} 
  ${HDF5_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/ahdfreaders
  ${CMAKE_CURRENT_SOURCE_DIR}/common
  )


# We need to add library dependencies for the plugin.
ADD_SUBDIRECTORY(ahdfreaders) 
ADD_SUBDIRECTORY(common)

TARGET_LINK_LIBRARIES(ameletHDFReader
  amelethdf_readers
  common
  ${AMELETHDF_LIBRARY_DIRS}/libamelethdfc.a 
  ${HDF5_LIBRARIES}
  )
