
SET(TEST_NAME "tests_vtk_amelethdf")
FILE(GLOB_RECURSE test_source_files *.cxx)

INCLUDE_DIRECTORIES(${VTKAH5_EXTRA_TESTS_LIBRARIES_INCLUDE})
LINK_DIRECTORIES(${VTKAH5_EXTRA_TESTS_LIBRARIES_DIRS})

ADD_EXECUTABLE(${TEST_NAME} ${test_source_files})

TARGET_LINK_LIBRARIES(${TEST_NAME} ${VTKAH5_LIBRARIES})
TARGET_LINK_LIBRARIES(${TEST_NAME} ${VTKAH5_EXTRA_TESTS_LIBRARIES})

# Add the builded executable into test list.
ADD_TEST("${TEST_NAME}" "${EXECUTABLE_OUTPUT_PATH}/${TEST_NAME}")